@@ -2,6 +2,9 @@ Cascading Change Log
 
 2.1.4 [unreleased]
 
+  Restored platform test compatibility with Cascading 2.0.x via return of c.p.PlatformRunner.Platform annotation
+  and deprecated c.t.LocalPlatform and c.t.HadoopPlatform platform implementations.
+
 2.1.3
 
   Fix for extra trailing ']' in c.t.Tap#toString().
